--- a/style.css
+++ b/style.css
@@ -50,9 +50,14 @@ body{
     justify-content: center;
     align-items: center;
     /* height: 100vh; */
+    font-size: 16px;
 }
 p, ul > li, ol > li, th, td{
     font-family: var(--outfit-font);
+    font-weight: 400;
+}
+ul > li, ol > li{
+    line-height: 2rem;
 }
 #container{
     background-color: var(--white-color);
@@ -61,6 +66,7 @@ p, ul > li, ol > li, th, td{
     border-radius: 15px;
     padding: 2rem;
     max-width: 40rem;
+    margin: 2rem;
 }
 header > img{
     border-radius: 10px;
@@ -71,4 +77,45 @@ header > img{
     min-width: 0px;
     flex-grow: 1;
     flex-shrink: 1;
+}
+h1, h2{
+    font-family: var(--young-serif-font);
+    font-weight: 400;
+}
+
+.prep-time > h2{
+    color: var(--rose-800);
+    font-family: var(--outfit-font);
+    font-weight: 600;
+}
+.prep-time{
+    background-color: var(--rose-50);
+    border-radius: 10px;
+    padding: 1rem;
+}
+h2{
+    color: var(--brown-800);
+}
+table{
+    width:100%;
+    border-collapse: collapse;
+    table-layout: fixed;
+}
+td{
+    font-weight: 700;
+    color: var(--brown-800);
+}
+th{
+    padding-left: 2rem;
+}
+li::marker{
+    color: var(--brown-800);
+    font-weight: 700;
+}
+.nutrition-underlines, .instructions, .ingredients{
+    border-bottom: 1px solid var(--stone-150);
+}
+th, td{
+    padding: 1rem;
+    text-align: left;
 }
