--- a/style.css
+++ b/style.css
@@ -55,6 +55,7 @@ body{
 p, ul > li, ol > li, th, td{
     font-family: var(--outfit-font);
     font-weight: 400;
+    color: var(--stone-600);
 }
 ul > li, ol > li{
     line-height: 2rem;
@@ -78,6 +79,9 @@ header > img{
     flex-grow: 1;
     flex-shrink: 1;
 }
+header > p{
+    padding-bottom: 1rem;
+}
 h1, h2{
     font-family: var(--young-serif-font);
     font-weight: 400;
@@ -93,6 +97,9 @@ h1, h2{
     border-radius: 10px;
     padding: 1rem;
 }
+.prep-time ul li{
+    text-indent: 1rem
+}
 h2{
     color: var(--brown-800);
 }
@@ -104,6 +111,7 @@ table{
 td{
     font-weight: 700;
     color: var(--brown-800);
+    padding: 1rem;
 }
 th{
     padding-left: 2rem;
@@ -116,6 +124,5 @@ li::marker{
     border-bottom: 1px solid var(--stone-150);
 }
 th, td{
-    padding: 1rem;
     text-align: left;
 }
